# Rey30_Magestic_Card

./: .env.example  .gitattributes  .gitignore  LOWCODING COMPLETO — CARD DESIGN ENGINE.txt  LOWCODING COMPLETO — CARD DESIGN PRO EXPANSION.txt  LOWCODING COMPLETO — REYCAD BATTLE RENDER ENGINE + GIT SAFETY.txt  LOWCODING PARA CODEX — “ASSET VAULT  LIBRERÍA NATIVA GLOBAL.txt  LOWCODING PARA CODEX — “PLAY-IN-EDITOR + BUILD + EXPORT.txt  LOWCODING PARA CODEX.txt  LOWCODING — REY SCENE ENGINE + ASSET SYSTEM + MANNEQUIN PAINT SYSTEM.txt  LOWCODING — REY TCG ECOSYSTEM AI-FIRST TRANVERSAL.txt  LOWCODING — REY TCG GLOBAL ECOSYSTEM EXPANSION.txt  LOWCODING — REYVERSE ENGINE CORE (AI-FIRST WORLD ENGINE).txt  LOWCODING — REYVERSE STARTUP MASTER SPEC.txt  LOWCODING — REYVERSE WORLD ENGINE (ROBLOX + UNITY + UNREAL LITE).txt  LOWCODING — TCG ADVANCED SYSTEM + AI INTEGRATION.txt  PROYECTO ReyMeshy (Rust Core Geometry Engine) lowcoding.txt  Plan de Lowcoding Sistema AI-First & ReyMeshy Core.txt  README.md  Rey30_Mayestic_Card_Lowcoding.txt  Rey30_Mayestic_card_Lowcoding_2.txt  STACK Y PRINCIPIOS LOWCODING.txt  package-lock.json  package.json  tsconfig.json
benchmarks/: reycad-runtime-baseline.json
config/: InferenceProviders.json
docs/: ACS_SPEC.md  ANALISIS_LOWCODING.md  AUDITORIA_INTEGRAL_LOWCODING_2026-03-03.md  BACKLOG_FASES_COMPLETO.md  CARDS_CREATOR_EDITOR_CONTRACT.md  CARD_ENGINE_RULES_V1.md  CUTOVER_SQLSERVER_STATUS_2026-03-03.md  ENDPOINTS_ACS.md  GIT_VERSIONING_CONTROL.md  (+25 more)
reymeshy/: Cargo.toml
reymeshy/src/: compression.rs  lib.rs  lod.rs  main.rs  remesh.rs  uv.rs
(+258 files in other folders)
